# pareto

./: .gitignore  README.md  pyproject.toml
examples/: optimize_tiny_mlp.py
infermap/: __init__.py  benchmark.py  candidates.py  cli.py  inspector.py  pareto.py  preflight.py  profiler.py  recommender.py
tests/: conftest.py  test_benchmark.py  test_candidates.py  test_inspector.py  test_pareto.py  test_pipeline.py  test_preflight.py  test_profiler.py  test_recommender.py
