[project]
name = "infermap"
version = "0.1.0"
description = "Hardware-aware ML deployment optimization and recommendation framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "psutil>=5.9.0",
    "onnxruntime>=1.17.0",
    "torchinfo>=1.8.0",
    "plotly>=5.20.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
cuda = ["pynvml>=11.5.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
]

[project.scripts]
infermap = "infermap.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_cuda: skips if CUDA is not available",
    "requires_mps: skips if MPS is not available",
    "requires_cpu: always runs (CPU path)",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
